# novus-interview

./: README.md  docker-compose.yml
transactions-api/: Dockerfile  pyproject.toml  requirements.txt
transactions-api/fixtures/: movements.json  users.json
transactions-api/tests/: test_auth_routes.py  test_auth_service.py  test_flask_app.py
transactions-api/transactions_api/: app.py  containers.py  decorators.py  settings.py
transactions-api/transactions_api/routes/: auth.py  transactions.py
transactions-api/transactions_api/schemas/: __init__.py  _common.py  transactions.py  users.py
transactions-api/transactions_api/services/: __init__.py  auth.py
transactions-api/transactions_api/services/db/: __init__.py  _common.py  transactions.py  users.py
transactions-ui/: Dockerfile  package.json
transactions-ui/src/: App.tsx  hooks.tsx  index.tsx  schemas.ts
transactions-ui/src/components/: EmptyMovement.tsx  MovementDetails.tsx  MovementItem.tsx  MovementList.tsx  NewMovementForm.tsx  NovusLogo.tsx
transactions-ui/src/pages/: Movements.tsx  SignIn.tsx
transactions-ui/src/services/: api.ts  auth.ts
